@@ -3,7 +3,8 @@ Java Marine API - changelog
 
 Version 0.11.0-SNAPSHOT
 
-- Support for $STALK sentences; the NMEA layer of Raymarine SeaTalk protocol.
+  - Support for $STALK sentences; the NMEA layer of Raymarine SeaTalk protocol.
+  - RPMSentence; added missing RPM setter
 
 Version 0.10.0 (2017-06-21)
 
